# hotfix_dexload

./: README.md  build.gradle  rb.sh  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
appa/: build.gradle
appa/src/main/: AndroidManifest.xml
appb/: build.gradle
appb/src/main/: AndroidManifest.xml
buildSrc/: build.gradle
dexload/: build.gradle
dexload/src/main/: AndroidManifest.xml
dexload_Cydia/: CMakeLists.txt  build.gradle
dexload_Cydia/src/main/: AndroidManifest.xml
dexload_Cydia/src/main/cpp/: cydia-hook.cpp
dexload_Cydia/src/main/cpp/include/: dalvik.h
dexload_Cydia/src/main/java/com/a/dexload/cydia/: ApplicationApp.java  MainActivity.java
dexload_Cydia/src/main/res/layout/: activity_app_dexload_cydia.xml
dexload_Cydia/src/main/res/values/: strings.xml
dexload_QFix/: CMakeLists.txt  build.gradle
dexload_QFix/src/main/: AndroidManifest.xml
dexload_QFix/src/main/cpp/: qfix_resolve.cpp
dexload_QFix/src/main/java/com/a/dexload/qfix/: ApplicationApp.java  MainActivity.java  ResolveTool.java
dexload_QFix/src/main/res/layout/: activity_app_dexload_qfix.xml
dexload_QFix/src/main/res/values/: strings.xml
dexload_QZone/: build.gradle
dexload_QZone/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
hack/: build.gradle  dex.sh
hotfix_dexload/: build.gradle
hotfix_dexload_QZone/: build.gradle
libDexInstall/: build.gradle
meituan_robust/: build.gradle
meituan_robust/robust/: methodMap.txt
plugin/: build.gradle
retrofitsample/: build.gradle
(+77 files in other folders)
